--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -49,6 +49,11 @@ body {
     border-radius: 5px;
 }
 
+.pokemon-card:hover {
+    transform: scale(1.02);
+    transition: transform 0.1s ease;
+}
+
 .pokemon-card-title {
     padding-top: 5px !important;
     text-decoration: none !important;
